# serializer version: 1
# name: test_create[full][otu]
  dict({
    'abbreviation': 'TMV',
    'id': 'bf1b993c',
    'isolates': list([
    ]),
    'issues': dict({
      'empty_isolate': False,
      'empty_otu': True,
      'empty_sequence': False,
      'isolate_inconsistency': False,
    }),
    'last_indexed_version': None,
    'most_recent_change': dict({
      'created_at': datetime.datetime(2015, 10, 6, 20, 0),
      'description': 'Created Tobacco mosaic virus (TMV)',
      'id': 'bf1b993c.0',
      'method_name': <HistoryMethod.create: 'create'>,
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
    }),
    'name': 'Tobacco mosaic virus',
    'otu_schema': list([
    ]),
    'reference': dict({
      'data_type': <ReferenceDataType.genome: 'genome'>,
      'id': 1,
      'name': 'Reference',
    }),
    'remote': None,
    'verified': False,
    'version': 0,
  })
# ---
# name: test_create[full][return_value]
  dict({
    'abbreviation': 'TMV',
    'id': 'bf1b993c',
    'isolates': list([
    ]),
    'issues': dict({
      'empty_isolate': False,
      'empty_otu': True,
      'empty_sequence': False,
      'isolate_inconsistency': False,
    }),
    'last_indexed_version': None,
    'most_recent_change': dict({
      'created_at': datetime.datetime(2015, 10, 6, 20, 0),
      'description': 'Created Tobacco mosaic virus (TMV)',
      'id': 'bf1b993c.0',
      'method_name': <HistoryMethod.create: 'create'>,
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
    }),
    'name': 'Tobacco mosaic virus',
    'otu_schema': list([
    ]),
    'reference': dict({
      'data_type': <ReferenceDataType.genome: 'genome'>,
      'id': 1,
      'name': 'Reference',
    }),
    'remote': None,
    'verified': False,
    'version': 0,
  })
# ---
# name: test_create[no_abbreviation][otu]
  dict({
    'abbreviation': '',
    'id': 'bf1b993c',
    'isolates': list([
    ]),
    'issues': dict({
      'empty_isolate': False,
      'empty_otu': True,
      'empty_sequence': False,
      'isolate_inconsistency': False,
    }),
    'last_indexed_version': None,
    'most_recent_change': dict({
      'created_at': datetime.datetime(2015, 10, 6, 20, 0),
      'description': 'Created Prunus virus A',
      'id': 'bf1b993c.0',
      'method_name': <HistoryMethod.create: 'create'>,
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
    }),
    'name': 'Prunus virus A',
    'otu_schema': list([
    ]),
    'reference': dict({
      'data_type': <ReferenceDataType.genome: 'genome'>,
      'id': 1,
      'name': 'Reference',
    }),
    'remote': None,
    'verified': False,
    'version': 0,
  })
# ---
# name: test_create[no_abbreviation][return_value]
  dict({
    'abbreviation': '',
    'id': 'bf1b993c',
    'isolates': list([
    ]),
    'issues': dict({
      'empty_isolate': False,
      'empty_otu': True,
      'empty_sequence': False,
      'isolate_inconsistency': False,
    }),
    'last_indexed_version': None,
    'most_recent_change': dict({
      'created_at': datetime.datetime(2015, 10, 6, 20, 0),
      'description': 'Created Prunus virus A',
      'id': 'bf1b993c.0',
      'method_name': <HistoryMethod.create: 'create'>,
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
    }),
    'name': 'Prunus virus A',
    'otu_schema': list([
    ]),
    'reference': dict({
      'data_type': <ReferenceDataType.genome: 'genome'>,
      'id': 1,
      'name': 'Reference',
    }),
    'remote': None,
    'verified': False,
    'version': 0,
  })
# ---
